--- a/menu/content/ambient-menu.html
+++ b/menu/content/ambient-menu.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN"><html><head><meta content="text/html; charset=UTF-8"http-equiv="content-type"><title>Lunch menu</title><link rel="stylesheet" href="ambient-menu-style.css"><link rel="icon" type="image/png" href="https://raaimo.github.io/menu/content/ambient-menu-icon.png"></head><small>Last update: 06.05.2022 09:11:27</small><table >
+<!DOCTYPE html PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN"><html><head><meta content="text/html; charset=UTF-8"http-equiv="content-type"><title>Lunch menu</title><link rel="stylesheet" href="ambient-menu-style.css"><link rel="icon" type="image/png" href="https://raaimo.github.io/menu/content/ambient-menu-icon.png"></head><small>Last update: 06.05.2022 09:36:43</small><table >
 <tr><th>SRDCOVKA<br><a href="http://www.jidelnasrdcovka.cz/">http://www.jidelnasrdcovka.cz/</a></th></tr>
 <tr>
 <td>
@@ -120,7 +120,7 @@
 <tr><th>RYBARNA<br><a href="http://rybarna.net/denni-menu/">http://rybarna.net/denni-menu/</a></th></tr>
 <tr>
 <td>
-<ol><li>Peceny filet z atlanticke makrely s citronem a gaj coj, jarni bramborovy salat s redkvickami, cibulkou a zelenymi bylinkami 145</li><li>Peceny filet z cerstveho morskeho vlka s citronem a gaj coj, jarni bramborovy salat s redkvickami, cibulkou a zelenymi bylinkami 175</li><li>Libanonska hovezi govurma s korenim baharat v arabskem chlebu s cizrnovym hummusem, korenena ryze, salatek {L} 145</li><li>Italske houbove rizoto na bilem vine s parmezanem a pecenym kurecim stehnem {volny chov}, salatek 175</li><li>Baba ganus – arabsky dip z pecenych lilku a cervene cocky s tahini, sazene vejce, arabsky chleb, salatek {L} 145</li></ol>
+<ol><li>Peceny filet z atlanticke makrely s citronem a gaj coj, jarni bramborovy salat s redkvickami, cibulkou a zelenymi bylinkami 145</li><li>Peceny filet z cerstveho morskeho vlka s citronem a gaj coj, jarni bramborovy salat s redkvickami, cibulkou a zelenymi bylinkami 175</li><li>Libanonska hovezi govurma s korenim baharat v arabskem chlebu s cizrnovym hummusem, korenena ryze, salatek {L} 145</li><li>Italske houbove rizoto na bilem vine s parmezanem, lanyzovym olejem a pecenym kurecim stehnem {volny chov}, salatek 175</li><li>Baba ganus – arabsky dip z pecenych lilku a cervene cocky s tahini, sazene vejce, arabsky chleb, salatek {L} 145</li></ol>
 </td>
 </tr>
 </table>
